# yscrmarkdown

./: .env.example  .gitignore  TEMP-recursive.py  TEMP.py  main.py  main2.py  main3.py  post_scrape.py  pyproject.toml  scrape.py
js/: dom_walker.js  dom_walker2.js  scrape_a_better_culture.js
js/walker/: bl_site.js  default.js  dom_walker3.js
lib/: ScrapesProcessor.py  classes.py  find_internal_links.py  models.py  playwright_dom_walker.py  scrape.py  scrape_crawl4ai.py  scrape_dom_walk_pw.py  utils.py
post_scrape/: a_better_culture.py
projects/BOILERPLATE/: 01_scrape.py
projects/a_better_culture/: 00_find_internal_links.py  01_scrape.py  02_chunk.py
projects/bl_site/: 00_find_internal_links.py  01_scrape.py  02_chunk.py
projects/bl_site-LOCAL/: 00_find_internal_links.py  01_scrape.py  02_chunk.py
scrapers/: BOILERPLATE.py  a_better_culture.py  brightlabs_site.py  thelook.py  thelook2.py  thelook3.py
storage/a_better_culture/: config.json
storage/a_better_culture/scrape_2025-09-21_0045/scraped_text/: about-us.html  about-us_reference-groups.html  about-us_working-groups.html  contact-us.html  environmental-scan.html  home.html  news-resources.html  news-resources_chat.html  news-resources_consolidated-wg-report.html  news-resources_cultural-safety.html  news-resources_curriculum.html  people_david-clarke.html  (+18 more)
storage/bl_site/: config.json  internal_links.py
storage/brightlabs_site/: config.json
storage/canon/a_better_culture/: config.json  internal_links.py
storage/canon/bl_site-LOCAL/: internal_links.py
storage/thelook/: config.json
(+121 files in other folders)
