[project]
name = "zscrape-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "inquirer>=3.4.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-ollama>=0.3.7",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
]
